# rust_projects

./: README.md
breakout/: Cargo.toml
breakout/features/: Cargo.toml
breakout/features/src/: lib.rs
breakout/game/: Cargo.toml
breakout/game/src/: main.rs
fnaf/: Cargo.toml
fnaf/animatronics/: Cargo.toml
fnaf/animatronics/src/: lib.rs  stack.rs
fnaf/game/: Cargo.toml
fnaf/game/src/: lib.rs  main.rs
fnaf/map/: Cargo.toml
fnaf/map/src/: lib.rs
fnaf/player/: Cargo.toml
fnaf/player/src/: lib.rs
grep/: sherlock.txt
grep/src/: lib.rs  main.rs
pendulum_simulations/: Cargo.toml
pendulum_simulations/double_pendulum/: Cargo.toml
pendulum_simulations/double_pendulum/src/: main.rs
pendulum_simulations/one_pendulum/: Cargo.toml
pendulum_simulations/one_pendulum/src/: main.rs
pendulum_simulations/pendulum/: Cargo.toml
pendulum_simulations/pendulum/src/: lib.rs
planets_simulation/: Cargo.toml
planets_simulation/forces/: Cargo.toml
planets_simulation/forces/src/: lib.rs
planets_simulation/planets/: Cargo.toml
planets_simulation/planets/src/: lib.rs
planets_simulation/simulation/: Cargo.toml
planets_simulation/simulation/src/: main.rs
pong/: Cargo.toml
pong/features/: Cargo.toml
pong/features/src/: lib.rs
pong/game/: Cargo.toml
pong/game/src/: main.rs
spring_simulation/: Cargo.toml
spring_simulation/simulation/: Cargo.toml
spring_simulation/spring/: Cargo.toml
vectors/: Cargo.toml
vectors/src/: lib.rs  main.rs
web_server/: 404.html  sobre_protocolos.txt
web_server/src/: lib.rs
(+2 files in other folders)
